--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -39,6 +39,10 @@ blockquote {
   color: #868e96;
 }
 
+span {
+font-weight:bold;  
+}
+
 .section-heading {
   font-size: 36px;
   font-weight: 700;
